# research

./: .gitignore  README.md  ds-zne-rb.ipynb
ewfs/: README.md  pyproject.toml
ewfs/ewfs/: ewfs.py  file_io.py  noise_models.py  plot.py
ewfs/notebooks/: demo.ipynb  plots.ipynb
ewfs/paper_data/: ibm_torino_calibrations.csv
ewfs/paper_data/H1-1_data/: H1-1_qubits_11_trial_1_shots_200.pickle  H1-1_qubits_11_trial_2_shots_200.pickle  H1-1_qubits_11_trial_3_shots_200.pickle  H1-1_qubits_11_trial_4_shots_200.pickle  H1-1_qubits_13_trial_1_shots_200.pickle  H1-1_qubits_13_trial_2_shots_200.pickle  H1-1_qubits_13_trial_3_shots_200.pickle  H1-1_qubits_13_trial_4_shots_200.pickle  H1-1_qubits_15_trial_1_shots_200.pickle  H1-1_qubits_15_trial_2_shots_200.pickle  H1-1_qubits_15_trial_3_shots_200.pickle  H1-1_qubits_15_trial_4_shots_200.pickle  H1-1_qubits_17_trial_1_shots_200.pickle  H1-1_qubits_17_trial_2_shots_200.pickle  H1-1_qubits_17_trial_3_shots_200.pickle  H1-1_qubits_17_trial_4_shots_200.pickle  H1-1_qubits_17_trial_5_shots_200.pickle  H1-1_qubits_17_trial_6_shots_200.pickle  H1-1_qubits_17_trial_7_shots_200.pickle  H1-1_qubits_1_trial_1_shots_200.pickle  H1-1_qubits_1_trial_2_shots_200.pickle  H1-1_qubits_1_trial_3_shots_200.pickle  H1-1_qubits_1_trial_4_shots_200.pickle  H1-1_qubits_3_trial_1_shots_200.pickle  H1-1_qubits_3_trial_2_shots_200.pickle  H1-1_qubits_3_trial_3_shots_200.pickle  H1-1_qubits_3_trial_4_shots_200.pickle  H1-1_qubits_5_trial_1_shots_200.pickle  H1-1_qubits_5_trial_2_shots_200.pickle  H1-1_qubits_5_trial_3_shots_200.pickle  (+12 more)
(+2123 files in other folders)
